--- a/css/styles.css
+++ b/css/styles.css
@@ -58,14 +58,14 @@ body {
 
 
 h1 {
-    color: #333;
+    font-family: "Paprika", system-ui;
     font-size: 3rem;
     margin-bottom: 15px;
     position: relative;
     z-index: 2;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
-    color: white;
+    color: rgb(155, 34, 125);
 }
 
 p {
@@ -243,11 +243,7 @@ p {
 }
 
 .gallery-item {
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 15px;
-    padding: 1.5rem;
     text-align: center;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease;
 }
 
@@ -265,9 +261,15 @@ p {
 }
 
 .gallery-item h3 {
-    color: #a875a0;
+    color:  rgb(155, 34, 125);
     font-size: 1.3rem;
     margin: 0;
-    text-shadow: none;
     font-weight: bold;
+}
+
+.gallery-item h4 {
+    color:  rgb(155, 34, 125);
+    font-size: 1.2rem;
+    margin: 0;
+    font-weight: normal;
 }
