--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,13 @@
 
 body {
     background-color: rgba(240, 111, 72, 0.568);
-    font-family: Oregano;
+    font-family: Paprika;
     margin: 0;
     padding: 0;
+    padding-top: 80px; /* Add space for fixed navbar */
     min-height: 100vh;
-    max-height: 100vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 .navbar {
   display: flex;
@@ -24,6 +23,12 @@ body {
   padding: 1rem 2rem;
   background-color: #a875a0;
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -58,7 +63,7 @@ body {
 
 
 h1 {
-    font-family: "Paprika", system-ui;
+    font-family: "Paprika";
     font-size: 3rem;
     margin-bottom: 15px;
     position: relative;
@@ -82,16 +87,16 @@ p {
 /* Fullscreen image styles */
 .fullscreen-image {
     width: 100vw;
-    height: calc(100vh - 80px - 60px); /* Full height minus navbar height minus footer height */
+    min-height: calc(100vh - 160px); /* Account for fixed navbar (80px) and footer (80px) */
     margin: 0;
     padding: 0;
-    overflow: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     padding-top: 2rem;
+    flex: 1;
 }
 
 .full-page-image {
