--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,19 @@ h1 {
     color: rgb(155, 34, 125);
 }
 
+h2 {
+    font-family: "Paprika";
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+    color: rgb(155, 34, 125);
+}
+
 p {
-    color: white;
+    color: rgb(155, 34, 125);
     font-size: 1.5rem;
     line-height: 1.5;
     position: relative;
